# tcl-kit-creator

./: HEADER  LICENSE  README  README.md  buildkit.sh  kitcreator
Expect/: build.sh
assets/boot/: on-boot.tcl.example
assets/boot/private/: private-boot.tcl
assets/private/: test.tcl
common/: common.sh
common/post/: sdk.sh
dbus/: build-kitcreator-dbus.sh
helpers/: make-kit-aix-ppc  make-kit-android-arm  make-kit-hpux-hppa64  make-kit-linux-amd64-static  make-kit-linux-i386  make-kit-linux-i386-static  make-kit-linux-mipsel  make-kit-macosx-amd64  make-kit-macosx-ppc  make-kit-netbsd-amd64  make-kit-netbsd-i386  make-kit-remote  make-kit-solaris-sparc64  make-kit-win32  make-kit-win64  make-kits  make-minkit  make-minkit-static
kitsh/: build.sh
kitsh/buildsrc/kitsh-0.0/: Makefile.common.in  boot.tcl  configure.ac  cvfs_data.c  dir2c.tcl  installvfs.tcl  kit.rc  kitInit.c  main.c  pwb.c  stringify.tcl  tclsh.c  winMain.c  wish.c
mk4tcl/patches/all/: metakit-2.4.9.7-fix64bitbigendianfff484.diff  metakit-2.4.9.7-supportranlibandar.diff
resources/: boot.tcl
tcc4tcl/: build.sh
tcl-modules/: build.sh
tcl/patches/8.4.19/: tcl-8.4.19-haikusignals-1rsk.diff
tcl/patches/all/: tcl-all-fix-stat64-bug2233954-mingw.diff  tcl-all-fix-stat64-bug2233954-newer.diff
tcl/patchscripts/: minbuild-nopkgs.sh  win32-32bit-timet.sh
tclparser/: build.sh
tclvfs/patches/: tclvfs-20080503-alwaysstatic.diff  tclvfs-20080503-compilewithcvs.diff  tclvfs-20080503-fixinternalrepuse.diff  tclvfs-20080503-includestat.diff  tclvfs-20080503-supportnativezlib.diff
tdom/: build.sh
thread/: build.sh
tk/: build.sh
tk/patchscripts/: fixfixstrtod.sh
tls/: build.sh
udp/: build.sh
utils/: build-common.sh  download-tclkit.tcl  pre.sh
utils/helpers/: download
utils/make/: make-kit-crosscompile  make-kit-macosx-i386  make-kit-solaris-amd64  make-kit-solaris-sparc  makearch.info
utils/test/: create-kitbuild-dir
utils/test/tests/: 01-pkgconfig.tcl  02-nameofexe.tcl  03-argv0.tcl  05-locale.tcl  06-parray.tcl  07-tk.tcl  08-interp.tcl  09-smallzip-nobase.tcl  11-metakit.tcl  12-threads.tcl  13-zip.tcl  15-mk4vfsfcopy.tcl
utils/web/: building.cgi  process_queue
utils/web/kitcreator.vfs/lib/sha1-2.0.3/: pkgIndex.tcl  sha1.tcl
yajltcl/: build.sh
